# megasena_api

./: .env.example  Insomnia_2021-04-15.json  Insomnia_megasena_api.json  README.MD  config.py  pyproject.toml  requirements.txt
app/: __init__.py
app/configurations/: database.py
app/models/: __init__.py  game_model.py  user_model.py
app/services/webscrapping/: __init__.py
app/views/: __init__.py  game_view.py  user_view.py
migrations/versions/: 160a9fd3f494_table_create_personmodel.py  1ba62d57b65e_removed_unused_models_personmodel.py  e16d338fc11b_table_create_usermodel.py  fee7baea4e84_table_create_gamemodel.py
tests/: __init__.py  conftest.py  test_routes_game.py  test_routes_user.py  test_user_view.py
